--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -527,6 +527,7 @@ fa:
         '639': "۶۳۹"
         amh: Amh
         ara: Ara
+        arc: Arc
         aze: Aze
         bam: Bam
         ban: Ban
@@ -535,6 +536,7 @@ fa:
         ber: Ber
         bos: Bos
         bul: Bul
+        cau: Cau
         cpe: Cpe
         cze: Cze
         deu: Deu
@@ -756,6 +758,7 @@ fa:
         '639': "دری"
         amh: "امهری - አማርኛ"
         ara: "عربی"
+        arc: "زبان آرامی - ארמית / Arāmît"
         aze: "آذری - Azərbaycan"
         bam: "بامبارایی - Bamanankan"
         ban: "زبان بالی- Basa Bali"
@@ -764,6 +767,7 @@ fa:
         ber: " بربری - Tamaziɣt"
         bos: "بوسنیایی - bosanski"
         bul: "بلغاری - български"
+        cau: "زبان آبازی - абаза бызшва"
         cpe: "کامرونی - Pidgin"
         cze: "چکی - čeština"
         deu: "آلمانی"
@@ -1037,7 +1041,7 @@ fa:
       elisa: "او کارشناس در رشته مطالعات فرهنگی است.این بدین معنی است که تو اطلاعات زیادی در مورد فرهنگهای مختلف دارد.او می تواند مسائل پیچیده را به راحتی توضیح  دهد.در clarat در تیم تحقیق فعالیت دارد و در برقراری نظم در صفحه اینترنتی ما فعالیت دارد.موسیقی مورد علاقه او Boat Behind از Kings of Convenience می باشد."
       esther: "او در رشته مطالعات فرهنگی تحصیل کرده است.در رشته سیاست و تاریخ آشنایی آگاهی زیادی دارد و به سرعت چیزهای جدید را یاد می گیرد.در clarat در تیم تحقیق فعالیت دارد و در زمینه کتاب مرجع فرهنگ زبان فعالیت دارد.موسیقی مورد علاقه او This charming man از The Smiths می باشد."
       franziska: "او کارشناس حقوق بین‌الملل است.این بدین معنی می باشد که او اطلاعات زیادی در مورد قوانین مشترک ملتها دارد و می تواند مسائل پیچیده به خوبی درک و به سرعت راه حل پیدا کند..در clarat در تیم تحقیق فعالیت دارد.موسیقی مورد علاقه او Explanations از Selah Sue می باشد."
-      hassan: Hat als Dolmetscher für Persisch gearbeitet. Persisch ist seine Muttersprache. Er ist schnell und gut organisiert. Bei clarat ist er im Übersetzer-Team und übersetzt clarat ins Persische. Sein Lieblingssong ist Looking For The Summer von Chris Rea.
+      hassan: "او در زمینه مترجمی زبان فارسی فعالیت کرده است و زبان فارسی زبان مادری او می باشد.او سرعت بالا و سازماندهی خوبی دارد.در کلارات در تیم مترجمی مشغول و وظیفه ترجمه کلارات به زبان فارسی را دارد.آهنگ مورد علاقه او Looking For The Summer از  Chris Rea می باشد."
       heading: "چه کسانی در clarat فعالیت دارند؟"
       jacinta: "او در رشته زبان آلمانی و فرانسوی تحصیل کرده است.زبان مادری او انگلیسی می باشد.او می تواند به راحتی و واضح بنویسد.در  clarat در تیم ترجمه فعالیت می کند و متن های clarat را به زبان انگلیسی ترجمه می کند.موسیقی مورد علاقه او Wannabe از Spice Girls می باشد."
       jakob: "او کارشناس مسائل آفریقا و آسیا می باشد.این بدین معنی است که او اطلاعات زیادی در مورد قاره ها دارد.او هنگام استرس کاری آرام می باشد و در clarat در تیم تحقیق فعالیت دارد.از دیگر فعالیت های او جستجوی سازمان ها می باشد.موسیقی مورد علاقه او Simplicity از Mbarga می باشد."
