clarat-org/clarat#931 - final localeapp pull before deploy

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -615,7 +615,7 @@ ar:
         nearby: "بالقرب"
         relevance: "أفضل النتائج"
       tabs:
-        categories: 
+        categories: "الفئات"
         filter: "فلتر"
         map: "خريطة"
     search_results:
@@ -632,8 +632,14 @@ ar:
         headline_small_map: "عروض محلية على الخريطة"
       more: "عروض أخرى عن طريق التليفون أو الأنترنت"
       off_canvas:
-        result_text: Show %{result_count} results
-      personal_anchor: 
+        result_text: "عرض النتائج %{result_count}"
+      personal_anchor:
+        few: "محلية  (%{count})"
+        many: "محلية  (%{count})"
+        one: "محلي  (%{count})"
+        other: "محلية  (%{count})"
+        two: "محليان  (%{count})"
+        zero: "محلي  (%{count})"
       personal_offers:
         one: "عرض محلي"
         other: "%{count} عروض محلية"
@@ -643,7 +649,13 @@ ar:
         category: 
         category_query: 
         default: 
-      remote_anchor: 
+      remote_anchor:
+        few: "أونلاين وهاتفي  (%{count})"
+        many: "أونلاين وهاتفي  (%{count})"
+        one: "أونلاين وهاتفي  (%{count})"
+        other: "أونلاين وهاتفي  (%{count})"
+        two: "أونلاين وهاتفي  (%{count})"
+        zero: "أونلاين وهاتفي  (%{count})"
       remote_offers:
         one: " استشارة  هاتفية أو عرض مساعدة عن طريق الإنترنت"
         other: "%{count} استشارات  هاتفية و عروض مساعدة عن طريق الإنترنت"
@@ -807,14 +819,15 @@ ar:
           ar: "عربي"
           de: Deutsch
           en: English
+          fa: 
           fr: Français
           pl: Polski
           ru: "Русский"
           tr: Türkçe
         section_link:
           desktop:
-            family: "إلي"
-            refugees: "إلى كلارات اللاجئين"
+            family: "إلي clarat refugees ›"
+            refugees: "إلى كلارات اللاجئين ›"
           mobile:
             home:
               family: 
@@ -966,18 +979,18 @@ ar:
       elisa: "خبيرة ثقافية. هذا يعني أنها تعرف الكثير عن الثقافات. يمكنها شرح الأمور الصعبة. في كلارات هي عضوة في فريق البحث. هي تعتني أيضاً بالنظام في صفحة كلارات في الإنترنت. أغنيتها المفضلة هي بوت بيهيند ل. كنجس اوف كونفينينس."
       esther: "درست علوم ثقافية. هي تعرف التاريخ والسياسة. وتتعلم بسرعة أشياء جديدة. في كلارات هي عضوة في فريق البحث. وتختص بقاموس كلارات. أغنيتها المفضلة هي زس شارمينج مان ل.سمثيز."
       franziska: "خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي اكسبلانيشنس ل. سيلاه سوي."
-      hassan: Hat als Dolmetscher für Persisch gearbeitet. Persisch ist seine Muttersprache. Er ist schnell und gut organisiert. Bei clarat ist er im Übersetzer-Team und übersetzt clarat ins Persische. Sein Lieblingssong ist Looking For The Summer von Chris Rea.
+      hassan: "كان يعمل مترجماً للغة الفارسية. الفارسية هي لغته الأم. هو سريع ومنظم في عمله. في كلارات هو عضو في فريق الترجمة ويقوم بترجمة كلارات إلى اللغة الفارسية. أغنيته المفضلة هي لوكينج فور ذا سامر ل. كريس ريا. "
       heading: "من وراء كلارات؟"
       jacinta: "درست اللغة الألمانية والفرنسية. لغتها الأم هي الإنجليزية. يمكنها الكتابة بشكل جيد وبلغة سهلة. في كلارات هي عضوة في فريق الترجمة وتقوم بترجمة كلارات إلى اللغة الإنجليزية. أغنيتها المفضلة هي وانبي ل.سبيس جيرل."
       jakob: "هو متخصص في العلوم الأسيوية والأفريقية. هذا يعني أنه يعرف الكثير عن هذه القارات. هو هادئ الطباع حتى إذا كان تحت ضغط. في كلارات هو عضو في الفريق البحثي. ويقوم بالبحث في الإنترنت عن منظمات. أغنيته المفضلة هي سيمبليسيتي."
       janina: "خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الناس والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد مستخدمي الصفحة. أغنيتها المفضلة هي ام اف جي ل.فانتا فور."
-      janina_m: Ist Hauswirtschaftliche Betriebsleiterin. Sie kann gut organisieren. Bei clarat kümmert sie sich um unsere Mitarbeiter. Und um unsere Büros. Sie sorgt dafür, dass alles funktioniert. Ihr Lieblingssong ist Kinder an die Macht von Herbert Grönemeyer.
+      janina_m: " درست إدارة ميزانية وتعمل في كلارات كمديرة مكتبية. هي قادرة على تنظيم الأمور بشكل جيدا. في كلارات هي تعتني بشئون العاملين. وتعمل على أن كل شئ يجري بشكل صحيح. أغنيتها المفضلة هي كندر أن دي ماخت ل. هيربيرت جرونيمير   "
       janne: "ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أغنيتها المفضلة هي سويت ل. راي إكس."
       jenny: "هي متخصصة في العلوم الإنسانية الإجتماعية. هذا يعني أنها تعرف الكثير عن الناس والثقافات. هي تجد دائما حلولاً. في كلارات هي عضوة في الفريق البحثي. وهي تعتني بالنظام في صفحتنا على الإنترنت. أغنيتها المفضلة هي آي سنج آي سويم لسيبير."
       jens: "خبير تربوي. هذا يعني أنه على دراية بالتعليم. هو يفهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث ويقرر أي العروض يصلح لكلارات. أغنيته المفضلة هي تو بي تو ل. لامبشوب."
       jule: "باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتابع بشكل عام كلارات اللاجئين. أغنيتها المفضلة هي هوم لإدوارد شارب."
       julia: "خبيرة لغة ألمانية. هذا يعني أنها على دراية جيدة باللغة الألمانية وكتابة النصوص. يمكنها الكتابة بشكل جيد وكذلك تفسير الأمور بشكل بسيط. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة. أغنيتها المفضلة هي ريكونر ل. راديوهيد."
-      julia_b: Hat Soziale Arbeit studiert. Und schon viel mit Kindern und Jugendlichen gearbeitet. Sie kann sich gut in andere Menschen hineinversetzen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Nantes von Beirut.
+      julia_b: "درست خدمة إجتماعية. وعملت كثيراً مع الأطفال والشبان. يمكنها أن تعرف كيف يشعر الآخرون. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي نانتيس ل. بيروت"
       julian: "خبير في الإقتصاد الإجتماعي. هذا يعني أنه يعرف الكثير عن الإقتصاد والمجتمع. هو على دراية جيدة أيضا بالكمبيوتر. في كلارات هو عضو في فريق البحث كما يقوم بأعمال تقنية أخرى. أغنيته المفضلة هي آول يو نيد ل. سابليما."
       juliane: "درست إدارة أعمال وسياحة. هي قادرة على التخطيط الجيد. وهي تجد دائماً حلولاً مبدعة. في كلارات هي تقوم بالتسويق. أغنيتها المفضلة هي إيسي ل.ذا كومودورس."
       karo: "درست علوم أوروبية. هذا يعني أنها تعرف الكثير عن السياسة الأوروبية. هي قادرة على التنظيم الجيد. في كلارات هي عضوة في الفريق البحثي. وتقوم بعمل دليل كلارات. أغنيتها المفضلة هي أليف ل.بيرل جام."
@@ -997,12 +1010,12 @@ ar:
       nils: "خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي يين ل. فييتس بروت."
       philipp: "درس التاريخ والسياسة والحقوق. يعرف الكثير عن السياسة والمجتمع. يمكنه فهم الأشياء المعقدة. في كلارات هو عضو بالفريق البحثي. أغنيته المفضلة هي زس إز أور سينس لأستروناوتليس"
       sabine: "هي أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. وهي توضح لنا قوانين اللجوء الألمانية. أغنيتها المفضلة هي فيزنا ل.كينو."
-      sophie: 
+      sophie: "درست إدارة غير ربحية. يمكنها التنظيم جيداً. كما أنها تدرك بسرعة ما هو مهم للعمل. في كلارات هي عضوة في فريق البحث. وهي تكتشف من يستخدم كلارات وكيف. أغنيتها المفضلة هي لوست ل. فرانك أوسيان   "
       stefan: "خبير ثقافي. هذا يعني أنه يعرف الكثير عن الثقافة والمجتمع. يمكنه إثارة إهتمام الناس لشئ ما ,هو من إبتكر فكرة كلارات. أغنيته المفضلة هي ريدرس اون زا ستورم ل. زا دورس."
       text: "كلارات هو مشروع تابع لمؤسسة بنكيزير الخيرية للمستقبل  (www.benckiser-stiftung.org) .\n نحن ننهض من خلال مؤسسة بنكيزيز منذ عدة سنوات بمشروعات فعالة لدعم الأطفال والشباب. \nوكنا نلاحظ دائما آنه من الصعب معرفة إذا ما كان هناك عروض للدعم. لذلك أصبح من الواضح لدينا:\n إذا كان بالفعل من الصعب علينا كخبراء أن نحصل على فكرة عامة؛ فكيف سيكون الأمر بالنسبة للأطفال والشباب والأسرة الذين يحتاجون بالفعل للمساعدة؟ \nأو بالنسبة للاجئين الذين في الأصل ليس لهم معرفة بإلمانيا بعد؟ \nفكانت الإجابة على هذه الإسئلة هي: صعب جدا! من هنا جاءت الفكرة لتولد كلارات: \n لإيجاد المساعدةبسهولة للأسرة عن طريق كلارات الأسرة وللاجئين عن طريق كلارات اللاجئين."
       tine: "أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد كتابة القصص. في كلارات هي عضوة في فريق البحث ومختصة بلغة كلارات. أغنيتها المفضلة هي سيرفيف إت ل. جوستبويت."
       title: "معلومات عن فريق عمل كلارات"
-      verena: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع. يمكنها جمع المعلومات بشكل جيد. في كلارات هي عضوة في فريق البحث. كما تقوم بعمل المعجم. أغنيتها المفضلة هي لوز إت ل. أوه وندر."
+      verena: "درست علوم الأجناس. هذا يعني أنها تعرف الكثير عن الأجناس المختلفة وكذلك عن مجتمعنا. يمكنها تنسيق الأمور وترتيبها. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي ميتروبوليس ل. نيونشفارتس."
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
@@ -1167,7 +1180,7 @@ ar:
     home: 
     impressum: "هيئة التحرير"
     liste: "القائمة"
-    liste-de-services: 
+    liste-de-services: "قائمة الخدمات"
     new: "جديد"
     offers: "عروض"
     organizations: "منظمة"
